fix: adjust SEE padding on mobile and format gtag script

--- a/src/components/MyWork/MyWork.module.css
+++ b/src/components/MyWork/MyWork.module.css
@@ -279,7 +279,7 @@
 
   .see {
     padding: 26px;
-    padding-top: 62px;
+    padding-top: 82px;
   }
 }
 
@@ -297,7 +297,7 @@
 
   .see {
     padding: 20px;
-    padding-top: 32px;
+    padding-top: 82px;
   }
 
   .content {
